--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_001.cshtml
@@ -8,7 +8,8 @@
     }
 }
 @using (Html.BeginForm("FAC_001", "FacturacionReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
-    {
+{
+    @Html.HiddenFor(q => q.IdEmpresa)
 <div class="box">
     <div class="box-header with-border">
         <div class="row">
