--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_005.cshtml
@@ -8,130 +8,131 @@
     }
 }
 @using (Html.BeginForm("FAC_005", "FacturacionReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
-    {
+{
+    @Html.HiddenFor(q => q.IdEmpresa)
 <div class="box">
-    <div class="box-header with-border">
-        <div class="row">
-            <div class="col-md-12">
-                <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+                </div>
             </div>
-        </div>
-        <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                <i class="fa fa-minus"></i>
-            </button>
-            <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                <i class="fa fa-times"></i>
-            </button>
-        </div>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
 
+        </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <label for="IdCliente">Cliente</label>
+                            @Html.Partial("_CmbCliente_Facturacion", Model.IdCliente)
+                            @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger", @id = "IdCliente" })
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <label for="Check1">@Html.CheckBoxFor(q => q.Check1) Mostrar Saldo 0</label>
+                            </div>
+                            <div class="checkbox">
+                                <label for="Check2">@Html.CheckBoxFor(q => q.Check2) Mostrar contactos</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdSucursal">Sucursal</label>
+                            @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion", Model.IdSucursal), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="">Fecha inicio*</label>
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </div>
+                                @Html.DevExpress().DateEditFor(q=> q.fecha_ini, settings =>
+                            {
+                                settings.Name = "fecha_ini";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="">Fecha fin*</label>
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </div>
+                                @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
+                            {
+                                settings.Name = "fecha_fin";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.box-body -->
+        </div>
     </div>
-    <div class="box-body">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <label for="IdCliente">Cliente</label>
-                        @Html.Partial("_CmbCliente_Facturacion", Model.IdCliente)
-                        @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger", @id = "IdCliente" })
-                    </div>
-                </div>
-                <div class="col-md-7">
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <label for="Check1">@Html.CheckBoxFor(q => q.Check1) Mostrar Saldo 0</label>
-                        </div>
-                        <div class="checkbox">
-                            <label for="Check2">@Html.CheckBoxFor(q => q.Check2) Mostrar contactos</label>
-                        </div>                        
-                        </div>
-                    </div>
+
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label for="IdSucursal">Sucursal</label>
-                        @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion",Model.IdSucursal), new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="">Fecha inicio*</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.DevExpress().DateEditFor(q=> q.fecha_ini, settings =>
-                        {
-                            settings.Name = "fecha_ini";
-                            settings.Properties.UseMaskBehavior = true;
-                            settings.Properties.EditFormat = EditFormat.Date;
-                            settings.Properties.EditFormatString = "dd/MM/yyyy";
-                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                        }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="">Fecha fin*</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
-                        {
-                            settings.Name = "fecha_fin";
-                            settings.Properties.UseMaskBehavior = true;
-                            settings.Properties.EditFormat = EditFormat.Date;
-                            settings.Properties.EditFormatString = "dd/MM/yyyy";
-                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                        }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="box-body">
+            @Html.DevExpress().WebDocumentViewer(settings =>
+                               {
+                                   settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+                                   settings.MobileMode = false;
+                                   settings.Name = "webDocumentViewer";
+                               }).Bind(ViewBag.Report).GetHtml()
         </div>
         <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
     </div>
-</div>
-                
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">@ViewBag.Title</h3>
-                    <div class="box-tools pull-right">
-                        <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                            <i class="fa fa-minus"></i>
-                        </button>
-                        <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                            <i class="fa fa-times"></i>
-                        </button>
-                    </div>
-                </div>
-                <div class="box-body">
-                    @Html.DevExpress().WebDocumentViewer(settings =>
-                                       {
-                                           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
-                                           settings.MobileMode = false;
-                                           settings.Name = "webDocumentViewer";
-                                       }).Bind(ViewBag.Report).GetHtml()
-                </div>
-                <!-- /.box-body -->
-                <div class="box-footer">
-                    [@Session["IdEmpresa"]] @Session["nom_empresa"]
-                </div>
-                <!-- /.box-footer-->
-            </div>
-            }
-        <script>
+}
+<script>
             $(function () {
                 $("#IdCliente").change(function () {
                     cargar_cliente();
@@ -162,4 +163,4 @@
                     }
                 });
             };
-            </script>
+</script>
