--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
@@ -10,6 +10,7 @@
 }
 @using (Html.BeginForm("ROL_009", "RRHHReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="box">
         <div class="box-header with-border">
             <div class="row">
