--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_012.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_012.cshtml
@@ -9,6 +9,7 @@
 }
 @using (Html.BeginForm("ROL_012", "RRHHReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -29,76 +30,76 @@
 
             <div class="row">
                 <div class="col-md-12">
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <label for="">Fecha inicio*</label>
-                                    <div class="input-group date">
-                                        <div class="input-group-addon">
-                                            <i class="fa fa-calendar"></i>
-                                        </div>
-                                        @Html.DevExpress().DateEditFor(q=> q.fecha_ini, settings =>
-                                    {
-                                        settings.Name = "fecha_ini";
-                                        settings.Properties.UseMaskBehavior = true;
-                                        settings.Properties.EditFormat = EditFormat.Date;
-                                        settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                    }).GetHtml()
-                                        @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
-                                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="">Fecha inicio*</label>
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
                                 </div>
+                                @Html.DevExpress().DateEditFor(q=> q.fecha_ini, settings =>
+                            {
+                                settings.Name = "fecha_ini";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                             </div>
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <label for="">Fecha fin*</label>
-                                    <div class="input-group date">
-                                        <div class="input-group-addon">
-                                            <i class="fa fa-calendar"></i>
-                                        </div>
-                                        @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
-                                    {
-                                        settings.Name = "fecha_fin";
-                                        settings.Properties.UseMaskBehavior = true;
-                                        settings.Properties.EditFormat = EditFormat.Date;
-                                        settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                    }).GetHtml()
-                                        @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            </div>
-                    
                         </div>
                     </div>
-                    <!-- /.box-body -->
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">@ViewBag.Title</h3>
-                    <div class="box-tools pull-right">
-                        <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                            <i class="fa fa-minus"></i>
-                        </button>
-                        <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                            <i class="fa fa-times"></i>
-                        </button>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="">Fecha fin*</label>
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </div>
+                                @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
+                            {
+                                settings.Name = "fecha_fin";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
                     </div>
+
                 </div>
-                <div class="box-body">
-                    @Html.DevExpress().WebDocumentViewer(settings =>
-               {
-                   settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
-                   settings.MobileMode = false;
-                   settings.Name = "webDocumentViewer";
-               }).Bind(ViewBag.Report).GetHtml()
-                </div>
-                <!-- /.box-body -->
-                <div class="box-footer">
-                    [@Session["IdEmpresa"]] @Session["nom_empresa"]
-                </div>
-                <!-- /.box-footer-->
             </div>
-            }
+            <!-- /.box-body -->
+        </div>
+    </div>
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            @Html.DevExpress().WebDocumentViewer(settings =>
+       {
+           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+           settings.MobileMode = false;
+           settings.Name = "webDocumentViewer";
+       }).Bind(ViewBag.Report).GetHtml()
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
+    </div>
+}
