--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROl_014.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROl_014.cshtml
@@ -9,6 +9,7 @@
 }
 @using (Html.BeginForm("ROL_014", "RRHHReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
