--- a/ERP/Core.Erp.Web/Areas/General/Views/Bodega/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Bodega/Anular.cshtml
@@ -82,7 +82,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="bo_Descripcion">Descripción</label>
+                    <label for="bo_Descripcion">Descripción*</label>
                     @Html.TextBoxFor(q => q.bo_Descripcion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.bo_Descripcion, "", new { @class = "text-danger" })
                 </div>
