--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Nuevo.cshtml
@@ -25,7 +25,7 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdProvincia">Código*</label>
+                    <label for="IdProvincia">Código</label>
                     @Html.TextBoxFor(q => q.IdProvincia, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.IdProvincia, "", new { @class = "text-danger" })
                 </div>
