--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
@@ -37,7 +37,7 @@
             </div>
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdProveedor">Proveedor</label>
+                    <label for="IdProveedor">Proveedor*</label>
                     @Html.Partial("_CmbProveedor_CXP", Model)
                     @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                 </div>
