--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Modificar.cshtml
@@ -18,7 +18,7 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="Cod_Provincia">Código*</label>
+                    <label for="Cod_Provincia">Código</label>
                     @Html.TextBoxFor(q => q.Cod_Provincia, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Cod_Provincia, "", new { @class = "text-danger" })
                 </div>
