--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/CatalogoTipoInventario/Anular.cshtml
@@ -15,7 +15,7 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="cod_Catalogo_tipo">Abreviatura*</label>
+                    <label for="cod_Catalogo_tipo">Abreviatura</label>
                     @Html.TextBoxFor(q => q.cod_Catalogo_tipo, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.cod_Catalogo_tipo, "", new { @class = "text-danger" })
                 </div>
