--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/Modificar.cshtml
@@ -16,7 +16,7 @@
         <div class="col-md-12">
             <div class="col-md-4">
                 <div class="form-group">
-                    <label for="cod_linea">Código*</label>
+                    <label for="cod_linea">Código</label>
                     @Html.TextBoxFor(q => q.cod_linea, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.cod_linea, "", new { @class = "text-danger" })
                 </div>
