--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Anular.cshtml
@@ -19,7 +19,7 @@
         <div class="col-md-12">
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="IdSucursal">Sucursal</label>
+                    <label for="IdSucursal">Sucursal*</label>
                     @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
