--- a/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoCompras/_GridViewPartial_cat_compras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoCompras/_GridViewPartial_cat_compras.cshtml
@@ -86,8 +86,17 @@
         settings.Columns.Add("CodCatalogo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Abrebiatura", "Abreviatura").Width = Unit.Percentage(10);
         settings.Columns.Add("Nombre", "Descripción").Width = Unit.Percentage(20);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
         settings.Columns.Add("Orden", "Orden").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        }); 
     });
 }
 @grid.Bind(Model).GetHtml()
