--- a/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/_GridViewPartial_comprador.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/_GridViewPartial_comprador.cshtml
@@ -82,7 +82,16 @@
         settings.Columns.Add("IdComprador", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("IdUsuario_com", "Usuario").Width = Unit.Percentage(10);
         settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(10);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
