--- a/ERP/Core.Erp.Web/Areas/Compras/Views/MotivoCompra/_GridViewPartial_motivocompra.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/MotivoCompra/_GridViewPartial_motivocompra.cshtml
@@ -83,7 +83,16 @@
         settings.Columns.Add("IdMotivo", "Id").Width = Unit.Percentage(10);
         settings.Columns.Add("Cod_Motivo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(10);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
