--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
@@ -86,7 +86,10 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("IdOrdenCompra", "Id").Width = Unit.Percentage(10);
+        settings.Columns.Add("pr_codigo", "Código").Width = Unit.Percentage(10);
+        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(10);
+        settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(10); 
+        settings.Columns.Add("Nombre", "Comprador").Width = Unit.Percentage(10);
         settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
         {
