--- a/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/_GridViewPartial_caja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/_GridViewPartial_caja.cshtml
@@ -1,5 +1,8 @@
+
+@using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "GridView_caja";
         settings.CallbackRouteValues = new { Controller = "Caja", Action = "GridViewPartial_caja" };
         settings.KeyFieldName = "IdCaja";
