--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/_GridViewPartial_tipo_producto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/_GridViewPartial_tipo_producto.cshtml
@@ -1,5 +1,7 @@
+@using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "GridView_tipo_producto";
         settings.CallbackRouteValues = new { Controller = "ProductoTipo", Action = "GridViewPartial_tipo_producto" };
         settings.KeyFieldName = "IdProductoTipo";
@@ -68,7 +70,7 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new  { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdProductoTipo = DataBinder.Eval(tc.DataItem, "IdProductoTipo") }) + "&nbsp;" +
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdProductoTipo = DataBinder.Eval(tc.DataItem, "IdProductoTipo") }) + "&nbsp;" +
                         Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdProductoTipo = DataBinder.Eval(tc.DataItem, "IdProductoTipo") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
@@ -77,7 +79,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -85,8 +87,8 @@
             c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdProductoTipo","ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("tp_descripcion","Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+        settings.Columns.Add("IdProductoTipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("tp_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
