--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/_GridViewPartial_tipo_movimiento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/_GridViewPartial_tipo_movimiento.cshtml
@@ -1,5 +1,7 @@
+@using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "GridView_tipo_movimiento";
         settings.CallbackRouteValues = new { Controller = "TipoMovimiento", Action = "GridViewPartial_tipo_movimiento" };
         settings.KeyFieldName = "IdMovi_inven_tipo";
@@ -77,7 +79,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -85,9 +87,9 @@
             c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdMovi_inven_tipo","ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("tm_descripcion","Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-        settings.Columns.Add("cm_descripcionCorta","Descripción corta").Width = System.Web.UI.WebControls.Unit.Percentage(30);
+        settings.Columns.Add("IdMovi_inven_tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("tm_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+        settings.Columns.Add("cm_descripcionCorta", "Descripción corta").Width = System.Web.UI.WebControls.Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
