--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad_det.cshtml
@@ -5,7 +5,7 @@
     {
         settings.Name = "GridViewPartial_empleado_novedad_det";
         settings.CallbackRouteValues = new { Controller = "EmpleadoNovedad", Action = "GridViewPartial_empleado_novedad_det", IdEmpleado = Model == null ? 0 : Model.IdEmpleado, IdNovedad = Model == null ? 0 : Model.IdNovedad };
-        settings.KeyFieldName = "IdNovedad";
+        settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
 
 
