--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml
@@ -66,13 +66,17 @@
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
             new StyleSheet { ExtensionSuite = ExtensionSuite.Editors },
             new StyleSheet { ExtensionSuite = ExtensionSuite.GridView },
-            new StyleSheet { ExtensionSuite = ExtensionSuite.Report }
+            new StyleSheet { ExtensionSuite = ExtensionSuite.Report },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.PivotGrid }
+
         )
     @Html.DevExpress().GetScripts(
             new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
             new Script { ExtensionSuite = ExtensionSuite.Editors },
             new Script { ExtensionSuite = ExtensionSuite.GridView },
-            new Script { ExtensionSuite = ExtensionSuite.Report }
+            new Script { ExtensionSuite = ExtensionSuite.Report },
+            new Script { ExtensionSuite = ExtensionSuite.PivotGrid }
+
         )
 </head>
 <body class="skin-blue layout-top-nav">
