--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_PivotGridROL_019.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_PivotGridROL_019.cshtml
@@ -1,7 +1,29 @@
 
+@using System;
+@using System.Linq;
+@using System.Collections.Generic;
+@using System.Web.Mvc;
+@using DevExpress.Export;
+@using DevExpress.Utils;
+@using DevExpress.Web.Mvc;
+@using DevExpress.XtraPivotGrid;
+@using DevExpress.XtraPrinting;
+@using System.Collections;
+@using System.Web.UI.WebControls;
+
 @Html.DevExpress().PivotGrid(settings => {
-    settings.Name = "PivotGrid1";
-    settings.CallbackRouteValues = new { Controller = "RRHHReportes", Action = "PivotGridPartial" };
+    settings.Name = "PivotGridROL_019";
+    settings.CallbackRouteValues = new { Controller = "RRHHReportes", Action = "PivotGridROL_019", Idempresa= ViewBag.Idempresa, fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdEmpleado= ViewBag.IdEmpleado };
+
+    settings.Width = Unit.Percentage(100);
+    settings.OptionsView.HorizontalScrollBarMode = ScrollBarMode.Auto;
+    settings.OptionsView.VerticalScrollBarMode = ScrollBarMode.Auto;
+
+
+
+
+
+
 
     settings.Fields.Add(field => {
         field.Area = PivotArea.FilterArea;
@@ -19,8 +41,8 @@
         field.Caption = "Cargo";
     });
     settings.Fields.Add(field => {
-        field.Area = PivotArea.FilterArea;
-        field.FieldName = "Rubro";
+        field.Area = PivotArea.ColumnArea;
+        field.FieldName = "ru_codRolGen";
         field.Caption = "Rubro";
     });
     settings.Fields.Add(field => {
@@ -29,7 +51,7 @@
         field.Caption = "Nómina Tipo";
     });
     settings.Fields.Add(field => {
-        field.Area = PivotArea.FilterArea;
+        field.Area = PivotArea.RowArea;
         field.FieldName = "Empleado";
         field.Caption = "Empleado";
     });
@@ -77,8 +99,13 @@
     });
     settings.Fields.Add(field =>
     {
-        field.Area = PivotArea.FilterArea;
+        field.Area = PivotArea.DataArea;
         field.FieldName = "Valor";
         field.Caption = "$ Valor";
+        field.CellFormat.FormatString = "n2";
+
     });
+
+
+
 }).Bind(Model).GetHtml()
